Fix text alignment issue in mac&cheese.css

--- a/recipes/mac&cheese.css
+++ b/recipes/mac&cheese.css
@@ -74,4 +74,5 @@ h2 {
 /* Change text color to white */
 body, p, li {
   color: white;
+  text-align: center;
 }
